chore: Switch to subscription-based execution for Claude Code

--- a/.env.sample
+++ b/.env.sample
@@ -3,7 +3,7 @@
 # If not set, ADW will use whatever GitHub account is authenticated with 'gh auth login'
 GITHUB_PAT=
 
-# Anthropic Configuration to run Claude Code in programmatic mode
+# Anthropic Configuration (Optional) - if not set, Claude Code uses your subscription auth (claude login)
 ANTHROPIC_API_KEY=
 
 # Claude Code Path - if 'claude' does not work run 'which claude' and paste that value here
